# sipfin

./: .gitignore  README.md  notes.md  run.jl  utils.sh
SipFin/: Project.toml  README.md
SipFin/src/: SipFin.jl  dmd.jl  graphs.jl  lilde.jl  liltrain.jl  old.jl  tmp.jl  viz.jl
apca/: Cargo.toml
apca/src/: lib.rs  main.rs
db/: Cargo.toml
db/src/: main.rs
finox/: .gitignore  Cargo.toml  README.md  intersect.jl  lilscript.sh  old.jl  testin.jl  utils.jl  utils.sh
finox/nasdaq_o2/: .gitignore  Cargo.toml  utils.sh
finox/nasdaq_o2/db/: .env  Cargo.toml
finox/nasdaq_o2/db/migrations/2020-05-11-180511_create_quotes/: down.sql  up.sql
finox/nasdaq_o2/db/migrations/2020-05-11-180511_create_quotes/src/: models.rs  schema.rs
finox/nasdaq_o2/db/src/: lib.rs  models.rs  schema.rs
finox/nasdaq_o2/migrations/2020-05-11-180511_create_quotes/: up.sql
finox/nasdaq_o2/migrations/2020-05-13-202257_create_quotes/: up.sql
finox/nasdaq_o2/src/: chart.rs  lib.rs  main.rs  models.rs  schema.rs
finox/nasdaq_o2/src/nasdaq/: chart.rs  dividends.rs  gen.rs  info.rs  insiders.rs  mod.rs  option_chain.rs  realtime.rs
finox/src/: .utils.rs.swp  bloomberg.rs  cme.rs  cups.rs  db.rs  fix.rs  fred.rs  getters.rs  govt.rs  gs.rs  headers.rs  jpxnews.rs  lib.rs  main.rs  misc.rs  moddys.rs  nasdaq.rs  ndaq.rs  news.rs  roses.rs  sec.rs  steam.rs  tmp  tmp.rs  types.rs  uncomtrade.rs  utils.rs  xueqiu.rs  yf.rs
finox/src/govt/: socials.rs  uspto.rs
finox/src/misc/: fix.rs  graphics.rs  misc.rs  sectors.rs  uncomtrade.rs  united_states.rs  weather.rs  xue.rs  yf.rs
finox/src/nasdaq/: chart.rs  dividends.rs  earnings.rs  financials.rs  gen.rs  holdings.rs  info.rs  insiders.rs  institutional.rs  option_chain.rs  realtime.rs  short_interest.rs
finox/src/news/: bloomberg.rs  gs.rs  guardian.rs  jpxnews.rs  moodys.rs  nyt.rs  sa.rs  tr.rs  wsj.rs
finox/types/: Cargo.toml
finox/types/src/: lib.rs  main.rs
finox/types/src/nasdaq/: chart.rs  gen.rs  option_chain.rs
jl/: graphs.jl  liltrain.jl  misc.jl  old.jl  smol.jl  testin.jl  utils.jl
jl/SipFin/src/: SipFin.jl  testin.jl  tmp.jl  utils.jl  viz.jl
listen/: Cargo.toml
listen/src/: main.rs
nasdaq_o2/: .gitignore  Cargo.toml  README.md  utils.sh
nasdaq_o2/src/: lib.rs  nasdaq.rs  ndaq.rs  schema.rs
nasdaq_o2/src/nasdaq/: info.rs  option_chain.rs  realtime.rs
py/: config.py  old.py  utils.py
roses/: Cargo.toml
roses/src/: MRE_serde.rs  cups.rs  lib.rs  tables.sql
sipfin/: CIK.py  Untitled.ipynb  alp.py  bt.py  edgar.py  rs.py  sentiment.py  test_edgar.py  utils.py
sipfin/.ipynb_checkpoints/: master-checkpoint.ipynb
utils/: Cargo.toml
utils/src/: MRE_serde.rs  lib.rs  main.rs
viz/: Cargo.toml
viz/src/: main.rs  web.rs
