[package]
name = "db"
version = "0.1.0"
authors = ["anandijain <anandj@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noria = "0.6.1"
tokio = { version = "0.2", features = ["full"] }
finox = { version = "0.1.0", path = "../finox" }

