[package]
name = "finox"
version = "0.1.0"
authors = ["anandijain <anandj@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106" }
serde_json = "1.0"
serde_derive = "1.0.106"
tokio = { version = "*", features = ["macro"] }
reqwest = { version = "*", features = ["json"] }
csv = "1.1.3"
chrono = "*"
futures = "0.3"
regex = "1"
