[package]
name = "finox"
version = "0.1.0"
authors = ["anandijain <anandj@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "finox"
path = "src/lib.rs"

[[bin]]
name = "fred"
path = "src/bin/fred.rs"

[[bin]]
name = "news"
path = "src/bin/news.rs"

[[bin]]
name = "yf"
path = "src/bin/yf.rs"

[[bin]]
name = "sec"
path = "src/bin/sec.rs"



[dependencies]
serde = { version = "1.0.106" }
serde_json = "1.0"
serde_derive = "1.0.106"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "*", features = ["json"] }
csv = "1.1.3"
chrono = "*"
futures = "0.3"
url = "2.1.1"
lazy_static = "1.4.0"
regex = "1"
roses = { version = "0.1.0", path = "../roses" }

scraper = "*"
