[package]
name = "finox"
version = "0.1.0"
authors = ["anandijain <anandj@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "finox"
path = "src/lib.rs"

[[bin]]
name = "fred"
path = "src/bin/fred.rs"

[[bin]]
name = "news"
path = "src/bin/news.rs"

[[bin]]
name = "yf"
path = "src/bin/yf.rs"

[[bin]]
name = "cme"
path = "src/bin/cme.rs"

[[bin]]
name = "sec"
path = "src/bin/sec.rs"

[[bin]]
name = "rt"
path = "src/bin/rt.rs"

[dependencies]
serde = { version = "1.0.106" }
serde_json = "1.0"
serde_derive = "1.0.106"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "*", features = ["json"] }
chrono = "*"
futures = "0.3"
url = "2.1.1"
lazy_static = "1.4.0"
regex = "1"
roses = { version = "0.1.0", path = "../roses" }
percent-encoding = "2.1.0"
scraper = "*"
dotenv = "*"
clap = "*"
tide = "*"
csv = "*"
async-std = {version = "1", features = ["attributes"]}
