[package]
name = "listen"
version = "0.1.0"
authors = ["anandijain <anandj@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
csv = "1.1.3"
finox = { version = "0.1.0", path = "../finox" }
