[package]
name = "nasdaq_o2"
version = "0.1.0"
authors = ["anandijain <anandj@uchicago.edu>"]
edition = "2018"

[lib]
name = "nasdaq_o2"
path = "src/lib.rs"

[[bin]]
name = "rt"
path = "src/bin/rt.rs"

[[bin]]
name = "sec"
path = "src/bin/se.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.110"
tokio = { version = "0.2", features = ["full", "macros"] }
reqwest = { version = "0.10.4", features = ["json"] }
chrono = "*"
futures = "0.3"
csv = "1.1.3"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
diesel_derives = "~1.4.1"
rand = "0.7.3"
percent-encoding = "2.1.0"
scraper = "0.12.0"
roses = { version = "0.1.0", path = "../roses" }

[profile.release]
debug = true
