[package]
name = "roses"
version = "0.1.0"
authors = ["anandijain <anandj@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "roses"
path = "src/lib.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.110"
tokio = { version = "0.2", features = ["full", "macros"] }
reqwest = { version = "0.10.4", features = ["json"] }
chrono = "*"
futures = "0.3"
csv = "1.1.3"
regex = "1"
