[package]
name = "viz"
version = "0.1.0"
authors = ["anandijain <anandj@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "*"
csv = "*"
chrono = "*"
serde = { version = "1.0.106", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0.106"
