[package]
name = "db"
version = "0.1.0"
authors = ["anandijain <anandj@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*" }
diesel = { version = "*", features = ["postgres", "chrono", "numeric"] }
diesel_derives = "~1.4.1"
dotenv = "0.15.0"
num-bigint = { version = "*", optional = true }
num-traits = { version = "*", optional = true }
num-integer = { version = "*", optional = true }
bigdecimal = { version = "0.1.2", optional = true }


